--- a/css/style.css
+++ b/css/style.css
@@ -2280,8 +2280,8 @@ button,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 22px 28px;
-  height: 54px;
+  padding: 18px 55px 18px 28px;
+  min-height: 54px;
   color: #316dc2;
   background-color: transparent;
   border: 1px solid #316dc2;
@@ -2292,6 +2292,10 @@ button,
   letter-spacing: 0.28px;
   text-transform: uppercase;
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .btn::before {
@@ -2320,9 +2324,9 @@ button,
 .btn:hover .btn__arrow {
   border-top: 1px solid #316dc2;
   border-right: 1px solid #316dc2;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .btn:hover .btn__arrow::before {
@@ -2342,9 +2346,9 @@ button,
 .btn:focus-visible .btn__arrow {
   border-top: 1px solid #316dc2;
   border-right: 1px solid #316dc2;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .btn:focus-visible .btn__arrow::before {
@@ -2367,9 +2371,9 @@ button,
 .btn:active .btn__arrow {
   border-top: 1px solid rgba(49, 109, 194, 0.7);
   border-right: 1px solid rgba(49, 109, 194, 0.7);
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .btn:active .btn__arrow::before {
@@ -2389,9 +2393,9 @@ button,
 .btn:disabled .btn__arrow {
   border-top: 1px solid #ffffff;
   border-right: 1px solid #ffffff;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
   cursor: not-allowed;
 }
 
@@ -2401,8 +2405,11 @@ button,
 
 .btn__arrow {
   position: absolute;
-  top: 22px;
+  top: 50%;
   right: 22px;
+  -webkit-transform: translateY(-50%) rotate(0deg);
+  -ms-transform: translateY(-50%) rotate(0deg);
+  transform: translateY(-50%) rotate(0deg);
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -2410,9 +2417,6 @@ button,
   height: 8px;
   border-top: 1px solid #ffffff;
   border-right: 1px solid #ffffff;
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
 }
 
 .btn__arrow::before {
@@ -2660,7 +2664,6 @@ button,
   height: 22px;
   background-color: transparent;
   border: 1px solid transparent;
-  border-radius: 50%;
   cursor: pointer;
 }
 
@@ -2675,22 +2678,41 @@ button,
   width: 10px;
   height: 1px;
   background-color: #316dc2;
+  z-index: 2;
 }
 
-.swiper-buttons__button:hover {
+.swiper-buttons__button::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  width: 22px;
+  height: 22px;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.swiper-buttons__button:hover::after {
   background-color: #ffffff;
 }
 
 .swiper-buttons__button:focus-visible {
-  background-color: #ffffff;
   outline: none;
+}
+
+.swiper-buttons__button:focus-visible::after {
+  background-color: #ffffff;
 }
 
 .swiper-buttons__button:focus {
   outline: none;
 }
 
-.swiper-buttons__button:active {
+.swiper-buttons__button:active::after {
   background-color: #ffffff;
 }
 
@@ -2704,8 +2726,11 @@ button,
 }
 
 .swiper-buttons__button:disabled {
-  background-color: transparent;
   cursor: not-allowed;
+}
+
+.swiper-buttons__button:disabled::after {
+  background-color: transparent;
 }
 
 .swiper-buttons__button:disabled::before {
@@ -2729,6 +2754,7 @@ button,
   cursor: pointer;
   border-top: 1px solid #316dc2;
   border-right: 1px solid #316dc2;
+  z-index: 3;
 }
 
 .swiper-buttons__arrow--prev {
@@ -2833,7 +2859,28 @@ button,
 }
 
 .hero__item {
-  padding: 365px 0 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  min-height: 718px;
+}
+
+.hero__item--experience .hero-main__info {
+  padding: 5px 50px 15px;
+}
+
+.hero__item--experience .hero-main__description p {
+  margin: -10px 0 10px;
 }
 
 .hero-header {
@@ -3237,6 +3284,7 @@ button,
 
 .hero-main {
   position: relative;
+  margin: 0 0 60px;
   text-align: start;
 }
 
@@ -3261,6 +3309,26 @@ button,
   background-color: transparent;
   border: 1px solid #316dc2;
   opacity: 1;
+}
+
+.hero__pagination .swiper-pagination-bullet:hover {
+  background-color: transparent;
+  border: 1px solid #316dc2;
+}
+
+.hero__pagination .swiper-pagination-bullet:focus-visible {
+  background-color: transparent;
+  border: 1px solid #316dc2;
+  outline: none;
+}
+
+.hero__pagination .swiper-pagination-bullet:focus {
+  outline: none;
+}
+
+.hero__pagination .swiper-pagination-bullet:active {
+  background-color: #316dc2;
+  border: 1px solid #316dc2;
 }
 
 .hero__pagination .swiper-pagination-bullet-active {
@@ -3295,8 +3363,14 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   gap: 30px;
-  padding: 0 50px 20px;
+  padding: 0 50px 35px;
   width: 62.26%;
   color: #484848;
   background-color: #ffffff;
@@ -3308,10 +3382,6 @@ button,
   top: 0;
   right: -26px;
   fill: #ffffff;
-}
-
-.hero-main__description {
-  margin: -7px 0 7px;
 }
 
 .hero-main__description svg {
@@ -3327,7 +3397,7 @@ button,
 }
 
 .hero-main__link a {
-  margin: 5px 0;
+  width: 196px;
 }
 
 .hero-main__link svg {
@@ -3588,7 +3658,7 @@ button,
   padding: 13px 18px 1px;
   width: calc(100% - 158px);
   min-width: 194px;
-  background-color: #f0efe9;
+  background-color: #ffffff;
   border-radius: 12px 12px 0 0;
 }
 
@@ -3621,7 +3691,7 @@ button,
   padding: 12px 18px 15px 18px;
   width: calc(100% - 31px);
   min-height: 79px;
-  background-color: #f0efe9;
+  background-color: #ffffff;
   border-radius: 0 12px 12px 12px;
 }
 
@@ -3740,7 +3810,7 @@ button,
 
 .news__wrapper {
   margin: 0 auto;
-  padding: 125px 100px;
+  padding: 125px 100px 122px;
   width: 100%;
   max-width: 1440px;
 }
@@ -4099,6 +4169,19 @@ button,
   cursor: pointer;
 }
 
+.question__wrapper:focus-within {
+  background-color: #ffffff;
+}
+
+.question__wrapper:focus-within .question__button::before {
+  background-color: transparent;
+}
+
+.question__wrapper:focus-within .question__sign::after,
+.question__wrapper:focus-within .question__sign::before {
+  background-color: #316dc2;
+}
+
 .question__wrapper:hover {
   background-color: #ffffff;
 }
@@ -4144,12 +4227,30 @@ button,
   background-color: #ffffff;
 }
 
+.question:nth-child(4n) .question__wrapper,
+.question:nth-child(5n) .question__wrapper {
+  padding: 40px 40px 25px;
+}
+
 .question.is-active .question__wrapper {
-  gap: 10px 0;
+  gap: 14px 0;
   margin: 0 0 10px;
-  padding: 40px 40px 35px;
+  padding: 40px 40px 31px;
   color: #ffffff;
   background-color: #316dc2;
+}
+
+.question.is-active .question__wrapper:focus-within .question__button::before {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+}
+
+.question.is-active .question__wrapper:focus-within .question__sign::after {
+  background-color: transparent;
+}
+
+.question.is-active .question__wrapper:focus-within .question__sign::before {
+  background-color: #ffffff;
 }
 
 .question.is-active .question__wrapper:hover .question__button::before {
@@ -4237,6 +4338,10 @@ button,
   cursor: pointer;
 }
 
+.question__button:focus {
+  outline: none;
+}
+
 .question__button::before {
   content: "";
   position: absolute;
@@ -4283,10 +4388,17 @@ button,
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
+  -ms-grid-row-align: center;
+  align-self: center;
   margin: 0;
   font-size: 28px;
   font-weight: 400;
-  line-height: 27px;
+  line-height: 34px;
+}
+
+.question:nth-child(4n) h3,
+.question:nth-child(5n) h3 {
+  margin: -8px 0 8px;
 }
 
 .question__content {
@@ -4313,13 +4425,13 @@ button,
   -ms-flex-align: center;
   align-items: center;
   margin: 0 auto;
-  padding: 113px 100px 120px;
+  padding: 118px 100px 120px;
   width: 100%;
   max-width: 1440px;
 }
 
 .reviews__header h2 {
-  margin: 0;
+  margin: 0 0 0 3px;
   color: #316dc2;
   font-size: 50px;
   font-style: normal;
@@ -4372,7 +4484,7 @@ button,
 }
 
 .reviews-card {
-  padding: 50px 30px 40px;
+  padding: 50px 30px 42px;
   height: auto;
   border: 1px solid #316dc2;
   border-radius: 16px;
@@ -4385,7 +4497,7 @@ button,
   grid-template-columns: auto 1fr;
   gap: 26px;
   margin: 0 auto;
-  max-width: 509px;
+  max-width: 504px;
 }
 
 .reviews-card__header {
@@ -4433,7 +4545,7 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 25px;
+  gap: 26px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -4447,7 +4559,7 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 11px;
+  gap: 6px;
 }
 
 .reviews-card__item h4 {
@@ -4473,7 +4585,7 @@ button,
 }
 
 .reviews-card__content h3 {
-  margin: 0 0 15px;
+  margin: 0 0 13px;
   color: #316dc2;
   font-size: 24px;
   font-weight: 400;
@@ -4502,7 +4614,7 @@ button,
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 73px;
-  padding: 120px 0;
+  padding: 118px 0 120px;
 }
 
 .contacts__header h2 {
@@ -4659,15 +4771,16 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 18px;
+  gap: 19px;
   margin: 0 0 40px;
 }
 
 .form__btn {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  padding: 18px 55px 18px 107px;
   width: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
 }
 
 .input-text {
@@ -4930,6 +5043,7 @@ button,
   gap: 30px;
   margin: 0;
   padding: 0;
+  max-width: 700px;
   list-style-type: none;
 }
 
@@ -4963,6 +5077,7 @@ button,
   gap: 20px;
   margin: 0;
   padding: 0;
+  max-width: 148px;
   list-style-type: none;
 }
 
@@ -5140,7 +5255,7 @@ button,
 .modal__content {
   position: relative;
   width: 510px;
-  padding: 54px 60px;
+  padding: 55px 60px 60px;
   border-radius: 16px;
   background-color: #ffffff;
 }
@@ -5163,7 +5278,7 @@ button,
   content: "";
   position: absolute;
   top: 50%;
-  right: 0;
+  right: -3px;
   width: 28px;
   height: 1px;
   background-color: #316dc2;
@@ -5216,11 +5331,11 @@ button,
   -ms-flex-align: center;
   align-items: center;
   padding: 0 20px;
-  margin: 0 0 30px;
+  margin: 0 0 18px;
 }
 
 .modal__header h2 {
-  margin: 0 0 40px 0;
+  margin: 0 0 10px;
   color: #316dc2;
   font-size: 32px;
   font-weight: 400;
@@ -5240,8 +5355,8 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 20px;
-  margin: 0 0 30px;
+  gap: 18px;
+  margin: 0 20px 30px;
 }
 
 .modal__btn {
@@ -5620,7 +5735,7 @@ button,
 .custom-select__icon {
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  width: 20px;
+  width: 16px;
   height: 10px;
   margin-left: auto;
   background-color: #ffffff;
@@ -5772,7 +5887,15 @@ button,
   }
 
   .hero__item {
-    padding: 632px 0 60px;
+    min-height: 941px;
+  }
+
+  .hero__item--experience .hero-main__info {
+    padding: 0 41px 27px 40px;
+  }
+
+  .hero__item--experience .hero-main__description p {
+    margin: -5px 0 5px;
   }
 
   .hero-header {
@@ -5794,16 +5917,13 @@ button,
   }
 
   .hero-main__info {
-    padding: 3px 40px 25px;
+    padding: 0 40px 28px;
     width: 87.2%;
   }
 
   .hero-main__description p {
+    margin: -5px 0 5px;
     line-height: 20px;
-  }
-
-  .hero-main__link a {
-    margin: -2px;
   }
 
   .about__wrapper {
@@ -5980,7 +6100,7 @@ button,
   }
 
   .news__wrapper {
-    padding: 98px 45px;
+    padding: 98px 45px 100px;
   }
 
   .news__wrapper h2 {
@@ -6071,13 +6191,24 @@ button,
     padding: 30px;
   }
 
+  .question:nth-child(4n) .question__wrapper,
+  .question:nth-child(5n) .question__wrapper {
+    padding: 30px 30px 20px;
+  }
+
   .question.is-active .question__wrapper {
-    padding: 30px;
+    gap: 16px 0;
+    padding: 30px 30px 25px;
   }
 
   .question h3 {
     font-size: 22px;
-    line-height: 21px;
+    line-height: 26px;
+  }
+
+  .question:nth-child(4n) h3,
+  .question:nth-child(5n) h3 {
+    margin: -5px 0 5px;
   }
 
   .question__content p {
@@ -6085,15 +6216,16 @@ button,
   }
 
   .reviews__wrapper {
-    padding: 92px 0 100px 45px;
+    padding: 90px 0 100px 45px;
   }
 
   .reviews__header h2 {
+    margin: 0;
     font-size: 34px;
   }
 
   .reviews__swiper {
-    margin: 40px 0 40px;
+    margin: 40px 0 39px;
   }
 
   .reviews__controls {
@@ -6101,10 +6233,11 @@ button,
   }
 
   .reviews-card {
-    padding: 50px 50px 45px;
+    padding: 50px 53px 46px 50px;
   }
 
   .reviews-card__wrapper {
+    gap: 25px;
     max-width: 100%;
   }
 
@@ -6112,11 +6245,20 @@ button,
     font-size: 20px;
   }
 
+  .reviews-card__list {
+    gap: 25px;
+  }
+
+  .reviews-card__item {
+    gap: 5px;
+  }
+
   .reviews-card__item p {
     line-height: 20px;
   }
 
   .reviews-card__content h3 {
+    margin: 0 0 16px;
     font-size: 20px;
     line-height: 24px;
   }
@@ -6131,13 +6273,17 @@ button,
   }
 
   .contacts__header h2 {
-    margin: 0 0 29px;
+    margin: 0 0 28px;
     font-size: 34px;
   }
 
   .contacts__list {
     width: 100%;
     margin: 0 0 58px;
+  }
+
+  .contacts__item h3 {
+    margin: 0 0 18px;
   }
 
   .contacts__item p {
@@ -6182,6 +6328,14 @@ button,
     gap: 17px;
   }
 
+  .form__btn {
+    padding: 14px 55px 14px 74px;
+  }
+
+  .footer__wrapper {
+    gap: 23px;
+  }
+
   .footer-header {
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
@@ -6196,6 +6350,7 @@ button,
 
   .footer-header__list {
     gap: 15px;
+    max-width: 100%;
   }
 
   .footer-header__link {
@@ -6203,6 +6358,7 @@ button,
   }
 
   .social {
+    max-width: 100%;
     gap: 10px;
     -webkit-box-ordinal-group: 4;
     -ms-flex-order: 3;
@@ -6242,7 +6398,12 @@ button,
     order: 1;
   }
 
+  .modal__header {
+    margin: 0 0 22px;
+  }
+
   .modal__header h2 {
+    margin: 0 0 12px;
     font-size: 28px;
     line-height: 28px;
   }
@@ -6254,7 +6415,6 @@ button,
 
 @media (max-width: 1199px) and (max-width: 767px) {
   .hero-main__description p {
-    margin: -5px 0 0;
     font-size: 14px;
   }
 }
@@ -6265,8 +6425,8 @@ button,
   }
 
   .btn {
-    padding: 16px 20px;
-    height: 42px;
+    padding: 14px 42px 14px 20px;
+    min-height: 42px;
     font-size: 12px;
     line-height: 12px;
   }
@@ -6277,20 +6437,7 @@ button,
   }
 
   .btn__arrow {
-    top: 16px;
     right: 16px;
-  }
-
-  .hero--internship {
-    background-image: url("../img/hero/internship-mobile.jpg");
-  }
-
-  .hero--volunteer {
-    background-image: url("../img/hero/volunteer-mobile.jpg");
-  }
-
-  .hero--experience {
-    background-image: url("../img/hero/experience-mobile.jpg");
   }
 
   .hero__swiper-container {
@@ -6298,8 +6445,11 @@ button,
   }
 
   .hero__item {
-    margin: 0 0 -5px;
-    padding: 188px 0 25px;
+    min-height: 496px;
+  }
+
+  .hero__item--experience .hero-main__info {
+    padding: 0;
   }
 
   .hero-header {
@@ -6321,6 +6471,10 @@ button,
 
   .main-nav--opened .site-list {
     min-width: 100%;
+  }
+
+  .hero-main {
+    margin: 0 0 20px;
   }
 
   .hero__swiper .swiper-pagination {
@@ -6374,8 +6528,7 @@ button,
 
   .hero-main__description {
     position: relative;
-    margin: 0;
-    padding: 0 14px 10px;
+    padding: 0 14px 5px;
     background-color: #ffffff;
     border-radius: 0 0 14px 0;
   }
@@ -6391,10 +6544,14 @@ button,
   .hero-main__link {
     position: relative;
     margin: 0;
-    padding: 12px 17px;
+    padding: 10px 15px;
     min-width: 182px;
     background-color: #ffffff;
     border-radius: 0 0 14px 14px;
+  }
+
+  .hero-main__link a {
+    width: 152px;
   }
 
   .hero-main__link svg {
@@ -6443,7 +6600,7 @@ button,
   }
 
   .about__info a {
-    width: 100%;
+    width: 76%;
   }
 
   .about__list {
@@ -6497,9 +6654,16 @@ button,
   }
 
   .programs__link {
+    margin: 0;
+    width: 100%;
     -webkit-box-ordinal-group: 6;
     -ms-flex-order: 5;
     order: 5;
+  }
+
+  .programs__link a {
+    padding: 14px 30px;
+    width: 70%;
   }
 
   .programs__swiper {
@@ -6743,12 +6907,18 @@ button,
   }
 
   .question__wrapper {
+    margin: 0 0 9px;
     padding: 20px 15px;
   }
 
+  .question:nth-child(4n) .question__wrapper,
+  .question:nth-child(5n) .question__wrapper {
+    padding: 25px 15px 14px 15px;
+  }
+
   .question.is-active .question__wrapper {
-    gap: 20px 0;
-    padding: 20px 15px;
+    gap: 15px 0;
+    padding: 20px 15px 14px 15px;
   }
 
   .question h3 {
@@ -6767,7 +6937,7 @@ button,
   }
 
   .reviews__wrapper {
-    padding: 50px 15px 30px;
+    padding: 60px 15px 32px;
   }
 
   .reviews__header {
@@ -6803,7 +6973,7 @@ button,
   }
 
   .reviews-card {
-    padding: 30px 13px 25px 15px;
+    padding: 30px 13px 23px 15px;
   }
 
   .reviews-card__wrapper {
@@ -6814,7 +6984,7 @@ button,
 
   .reviews-card__header {
     gap: 10px;
-    margin: 0 0 15px;
+    margin: 0 0 14px;
   }
 
   .reviews-card__image {
@@ -6850,6 +7020,7 @@ button,
   }
 
   .reviews-card__content h3 {
+    margin: 0 0 15px;
     font-size: 16px;
     line-height: 18px;
   }
@@ -7015,10 +7186,28 @@ button,
 
   .modal__content {
     width: 100%;
-    padding: 40px 15px;
+    padding: 37px 15px 40px;
+  }
+
+  .modal__close-btn {
+    top: 20px;
+    right: 20px;
+    width: 16px;
+    height: 16px;
+  }
+
+  .modal__close-btn::before,
+  .modal__close-btn::after {
+    width: 20px;
+  }
+
+  .modal__header {
+    margin: 0 0 20px;
+    padding: 0 25px;
   }
 
   .modal__header h2 {
+    margin: 0 0 8px;
     font-size: 18px;
     line-height: 18px;
   }
@@ -7027,17 +7216,68 @@ button,
     font-size: 14px;
   }
 
+  .modal__content form {
+    gap: 15px;
+    margin: 0 0 25px;
+  }
+
   .modal__btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 14px 40px 14px 0;
     width: 100%;
   }
 
+  .input-text-modal__list {
+    gap: 15px;
+  }
+
   .input-text-modal__label {
-    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .input-text-modal__item input {
+    min-height: 42px;
+  }
+
+  .input-checkbox-modal__label {
     line-height: 14px;
   }
 
   .custom-select__label {
     font-size: 12px;
     line-height: 14px;
+  }
+
+  .custom-select__label--modal {
+    margin: 0 0 8px;
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  .custom-select__button--modal {
+    height: 44px;
+  }
+
+  .custom-select__icon--modal {
+    width: 15px;
+  }
+}
+
+@media (max-width: 374px) {
+  .hero--internship {
+    background-image: url("../img/hero/internship-mobile.jpg");
+  }
+
+  .hero--volunteer {
+    background-image: url("../img/hero/volunteer-mobile.jpg");
+  }
+
+  .hero--experience {
+    background-image: url("../img/hero/experience-mobile.jpg");
   }
 }
